# words-api-client-python

./: README.md  pyproject.toml
doc/controllers/: ap-is.md
doc/models/: definitions-response.md  examples-response.md  frequency-details.md  frequency-response.md  pronunciation-details.md  pronunciation-response.md  synonyms-response.md  word-response.md
tests/controllers/: test_ap_is_controller.py
wordsapi/controllers/: ap_is_controller.py
wordsapi/models/: __init__.py  definitions_response.py  examples_response.py  frequency_details.py  frequency_response.py  pronunciation_details.py  pronunciation_response.py  syllable_details.py  synonyms_response.py  word_details.py  word_response.py
